--- a/index.html
+++ b/index.html
@@ -2,17 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device=width, intial-scale=1.0">
   <title>MET Musuem Tour</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<header id="header">
+  <div class="container">
+    <h1>MET Musuem Historical Tour</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vehicula metus in bibendum laoreet. Aenean libero est, egestas eu eros pretium, sodales iaculis est.</p>
+  </div>
+</header>
+<body id="body">
+  <main>
+    <form class="tall-container">
+      <section class="container box english">
+        <h3>English</h3>
+        <button type="button" class="button" id="englishButton">
+          <span class="number" id="englishButtonText">Click Here</span>
+        </button>
+      </section>
+      <section class="container box Russian">
+        <h3>Russian</h3>
+        <button type="button" class="button" id="russianButton">
+          <span class="number" id="russianButtonText">Click Here</span>
+        </button>
+      </section>
+    </form>
+  </main>
 
-
-
+  <footer>
+    <p>&copy;2021 MET Musuem Tour</p>
+  </footer>
 
 </body>
-
 
 
 </html>
