added flexbox features

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<header id="header">
-  <div class="container">
-    <h1>MET Musuem Historical Tour</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vehicula metus in bibendum laoreet. Aenean libero est, egestas eu eros pretium, sodales iaculis est.</p>
-  </div>
-</header>
 <body id="body">
-  <main>
+  <header id="header">
+    <div class="container">
+      <h1>MET Musuem Historical Tour</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vehicula metus in bibendum laoreet. Aenean libero est, egestas eu eros pretium, sodales iaculis est.</p>
+    </div>
+  </header>
+
+  <main class="main-body">
     <form class="tall-container">
-        <section class="container box english">
+        <section class="container-box-english">
             <h3>English</h3>
             <button type="button" class="button" id="englishButton">
               <span class="number" id="englishButtonText"><a href="englishpage.html">Click Here</a></span>
             </button>
         </section>
-      <section class="container box Russian">
+      <section class="container-box-russian">
         <h3>Russian</h3>
         <button type="button" class="button" id="russianButton">
           <span class="number" id="russianButtonText"><a href="russianpage.html">Click Here</a></span>
@@ -31,8 +32,8 @@
     </form>
   </main>
 
-  <footer>
-    <p>&copy;2021 MET Musuem Tour</p>
+  <footer class="main-footer">
+    <p id="footer-text">&copy;2021 MET Musuem Tour</p>
   </footer>
 
 </body>
