--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device=width, intial-scale=1.0">
   <title>MET Musuem Tour</title>
-  <link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Varela+Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body id="body">
